[gd_scene load_steps=2 format=2]

[ext_resource path="res://unsaved_prompt.gd" type="Script" id=1]

[node name="UnsavedPrompt" type="WindowDialog"]
margin_right = 300.0
margin_bottom = 95.0
rect_min_size = Vector2( 300, 0 )
window_title = "Please Confirm"
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -29.5
margin_right = 125.0
margin_bottom = 29.5
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 250.0
margin_bottom = 31.0
rect_min_size = Vector2( 250, 0 )
text = "You have unsaved changes. 
Would you like to save before closing?"
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 39.0
margin_right = 250.0
margin_bottom = 59.0
custom_constants/separation = 8
alignment = 1

[node name="Save" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 30.0
margin_right = 71.0
margin_bottom = 20.0
text = "Save"

[node name="DontSave" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 79.0
margin_right = 158.0
margin_bottom = 20.0
text = "Don't Save"

[node name="Cancel" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 166.0
margin_right = 220.0
margin_bottom = 20.0
text = "Cancel"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/DontSave" to="." method="_on_DontSave_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Cancel" to="." method="_on_Cancel_pressed"]
